2008-04-20  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgst.h: remove garbages.

	* src/rbgst-element.c: cleanup.

	* test/test_element.rb: add tests for GstElement#query and
	GstElement#send_event.

2008-04-16  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgst-object.c: Implement a custom initialize that sinks the created
	GstObject

	* src/test_element.rb: Add a refcounting testcase for GstObject classes
	created inside ruby

2008-04-16  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgst-element.c: Make Gst::Element#link_pads and
	Gst::Element#unlink_pads work like their C api counterparts (thus take source
	and sink names

	* src/rbgst-element.c: Implement Gst::Element#unlink

2008-04-16  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgst-ghost-pad.c: fix style.

	* src/rbgst.c (Init_gst_classes): fix style.

2008-04-16  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgst-ghost-pad.c, src/rbgst.c: Implement Gst::GhostPad

2008-04-16  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgst-element.c: _raise instead of _bug where appropriate

2008-04-15  Kouhei Sutou  <kou@cozmixng.org>

	* test/test_event.rb: add.

	* src/rbgst-event.c: define class.

	* src/rbgst-event.c: add missing definition.

	* src/rbgst-event.c: fix style.

	* src/rbgst.c (Init_gst_classes):
	- remove a garbage.
	- fix style.

2008-04-15  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgst-event.c, src/rbgst.c, src/rbgst.h, src/rbgstevent.c: Add an
	implementation of Gst::Event

2008-04-15  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgst-x-overlay.c: fix style.

	* src/rbgst-x-overlay.c: fix wrong cast.

	* src/rbgst-x-overlay.c: rename from src/rbgstxoverlay.c.

	* src/rbgst-seek.c: define classes.
	* test/test_seek.rb: add.

	* src/rbgst-seek.c: fix style.

	* src/rbgst.c: fix style.

	* src/rbgst-query.c: fix style.

	* src/rbgst-pipeline.c: rename from src/rbgstpipeline.c.

2008-04-15  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgstxoverlay.c: Add Gst::XOverlay#set_xwindow_id_with_buswatch helper